--- a/echo/Makefile
+++ b/echo/Makefile
@@ -1,18 +1,17 @@
+CC = gcc
+CFLAGS = -O2 -Wall -I .
+# This flag includes the Pthreads library on a Linux box.
+# Others systems will probably require something different.
+LIB = -lpthread
+all: echoclient echoserver
 
-  CC = gcc
-  CFLAGS = -O2 -Wall -I .
-  LIB = -lpthread
+echoserver: echoserver.c csapp.o
+	$(CC) $(CFLAGS) -o echoserver echoserver.c csapp.o $(LIB)
 
-  all: echoclient echoserveri
+echoclient: echoclient.c csapp.o
+	$(CC) $(CFLAGS) -o echoclient echoclient.c csapp.o $(LIB)
 
-  echoclient: echoclient.c csapp.o
-      $(CC) $(CFLAGS) -o echoclient echoclient.c csapp.o $(LIB)
-
-  echoserveri: echoserveri.c csapp.o
-      $(CC) $(CFLAGS) -o echoserveri echoserveri.c csapp.o $(LIB)
-
-  csapp.o: csapp.c
-      $(CC) $(CFLAGS) -c csapp.c
-
-  clean:
-      rm -f *.o echoclient echoserveri csapp *~
+csapp.o: csapp.c
+	$(CC) $(CFLAGS) -c csapp.c
+clean:
+	rm -f *.o echoserver echoclient *~
